--- a/battap/index.html
+++ b/battap/index.html
@@ -32,59 +32,64 @@
                 <li class="icon"><img src="../image/ins.png"></li>
             </ul>
         </div>
+
+        <div class="header-mobile">
+
+            <div class="img"><img src="../image/figma.png"></div>
+            <img class="icon" src="../image/icon.png">
+        </div>
+
         <!-- content -->
         <div class="content">
-            <div class="content3">
-                <h2 class="type">The best product start with Figma</h2>
-                <p class="text1">Most calendars are designed for team.Slate is designed for freelancers</p>
-                <p class="check"><button class="style" type="submit">Try For Free</button></p>
-            </div>
+            <h2 class="type">The best product start with Figma</h2>
+            <p class="text1">Most calendars are designed for team.Slate is designed for freelancers</p>
+            <div class="check"><button class="style" type="submit">Try For Free</button></div>
         </div>
 
     </div>
     <!-- footer -->
     <div class="footer">
-        <div class="menu">
-            <ul class="style">
-                <li class="title">
-                    <h3>Pages</h3>
-                </li>
-                <li class="list"><a href="https://www.w3schools.com/">Home</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Product</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Pricing</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">About</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Contact</a></li>
-            </ul>
-            <ul class="style">
-                <li class="title">
-                    <h3>Tomothy </h3>
-                </li>
-                <li class="list"><a href="https://www.w3schools.com/">Eleanor Edwards</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Ted Robertson</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Annette Russell</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Jennie Mckinney</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Gloria Richards</a></li>
-            </ul>
-            <ul class="style">
-                <li class="title">
-                    <h3>Jane Black </h3>
-                </li>
-                <li class="list"><a href="https://www.w3schools.com/">Philip Jones</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Product</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Colleen Russell</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Marvin Hawkins</a></li>
-                <li class="list"><a href="https://www.w3schools.com/">Bruce Simmmons</a></li>
-            </ul>
+        <!-- <div class="menu"> -->
+        <ul class="style">
+            <li class="title">
+                <h3>Pages</h3>
+            </li>
+            <li class="list"><a href="https://www.w3schools.com/">Home</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Product</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Pricing</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">About</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Contact</a></li>
+        </ul>
+        <ul class="style">
+            <li class="title">
+                <h3>Tomothy </h3>
+            </li>
+            <li class="list"><a href="https://www.w3schools.com/">Eleanor Edwards</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Ted Robertson</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Annette Russell</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Jennie Mckinney</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Gloria Richards</a></li>
+        </ul>
+        <ul class="style">
+            <li class="title">
+                <h3>Jane Black </h3>
+            </li>
+            <li class="list"><a href="https://www.w3schools.com/">Philip Jones</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Product</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Colleen Russell</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Marvin Hawkins</a></li>
+            <li class="list"><a href="https://www.w3schools.com/">Bruce Simmmons</a></li>
+        </ul>
 
-        </div>
-        <div class="about">
-            <ul class="style1">
-                <li class="icon1"><img src="../image/less.png">7480 Mockingbird Hill undefined </li>
-                <li class="icon1"><img src="../image/phone_.png">(239) 555-0108</li>
-                <li class="icon1"><img src="../image/twitter.png"><img src="../image/face.png"><img
-                        src="../image/ins.png"></li>
-            </ul>
-        </div>
+        <!-- </div> -->
+        <!-- <div class="about"> -->
+        <ul class="style1">
+            <li class="icon1"><img src="../image/less.png">7480 Mockingbird Hill undefined </li>
+            <li class="icon1"><img src="../image/phone_.png">(239) 555-0108</li>
+            <li class="icon1"><img src="../image/twitter.png"><img src="../image/face.png"><img src="../image/ins.png">
+            </li>
+        </ul>
+        <!-- </div> -->
 
     </div>
 
