--- a/baitapfigma/indexx.html
+++ b/baitapfigma/indexx.html
@@ -35,39 +35,297 @@
             <div class="check"><button class="style" type="submit">Try For Free</button></div>
         </div>
     </div>
-        <!-- phần2 -->
-        <div class="figma">
-            <div class="content1">
-                <h2 class="type">Feature</h2>
-                <h4 class="text-figma">Most calendars are designed for teams .Slate is diesign is for freelancers</h4>
+    <!-- phần2 -->
+    <div class="figma">
+        <div class="content1">
+            <h2 class="type">Feature</h2>
+            <h4 class="text-figma">Most calendars are designed for teams .Slate is diesign is for freelancers</h4>
+        </div>
+        <div class="content2">
+            <ul>
+                <li class="list">
+                    <div class="image"><img src="../image/slate.png.png"></div>
+                    <h5 class="text1">Open type features variable fonys</h5>
+                    <p class="text-content">Slate helps you see how many more days you need to work to reach your
+                        financial goal</p>
+                </li>
+                <li class="list">
+                    <div class="image"><img src="../image/mdi.png.png"></div>
+                    <h5 class="text1">Design with real data</h5>
+                    <p class="text-content">Slate helps you see how many more days you need to work to reach your
+                        financial goal</p>
+                </li>
+                <li class="list">
+                    <div class="image"><img src="../image/pen.png.png"></div>
+                    <h5 class="text1">Fastest way to
+                        take action</h5>
+                    <p class="text-content">Slate helps you see how many more days you need to work to reach your
+                        financial goal</p>
+                </li>
+            </ul>
+        </div>
+        <div class="footer">
+            <img src="../image//screen.png.png">
+        </div>
+    </div>
+    <!-- phan3 -->
+    <div class="container2">
+        <div class="figma2">
+            <h2 class="content-figma2">Fastest way to
+                organize</h2>
+            <h4 class="text-figma2">Most calendars are designed for teams.
+                Slate is designed for freelancers</h4>
+            <button type="button">Try For Free</button>
+        </div>
+        <div>
+            <img src="../image/Macbook .png.png">
+        </div>
+    </div>
+    <!-- phan4 -->
+    <div class="container3">
+        <div class="image3">
+            <img src="../image/undraw.png.png">
+        </div>
+        <div class="figma3">
+            <h3 class="content-figma3 ">At your fingertips</h3>
+            <h2 class="text-figma3">Lightning fast
+                prototyping </h2>
+            <h3 class="content-figma3 center">Subscribe to our Newsletter</h3>
+            <p class="center1">Available exclusivery on Figmaland</p>
+            <input type="email" placeholder="Your Email">
+            <button type="button">Subscribe</button>
+        </div>
+    </div>
+    <!-- phan5 -->
+    <div class="container4">
+        <div class="figma4">
+            <h2 class="content-figma4">Partners</h2>
+            <h4 class="text-figma4">Most calendars are designed for teams.
+                Slate is designed for freelancers</h4>
+        </div>
+        <div class="image4">
+            <ul>
+                <li class="img4 google">
+                    <h5 class="img4-figma">Client Name</h5>
+                    <div class="color">
+                        <span class="blues">G</span><span class="reds">o</span><span class="oranges">o</span><span
+                            class="blues">g</span><span class="greens">l</span><span class="reds">e</span>
+                    </div>
+                </li>
+                <li class="img4 amazon">
+                    <h5 class="img4-figma">Client Name</h5>
+                    <img src="../image/amazon.png.png">
+                </li>
+                <li class="img4 mcs">
+                    <h5 class="img4-figma">Client Name</h5> <img src="../image/mcs.png.png">
+                </li>
+
+                <li class="img4 uber ">
+                    <h5 class="img4-figma">Client Name</h5>
+                    <img src="../image/uber.png.png">
+                </li>
+                <li class="img4 drop">
+                    <h5 class="img4-figma">Client Name</h5>
+                    <img src="../image/dropbox.png.png">
+                </li>
+                <li class="img4 google">
+                    <h5 class="img4-figma">Client Name</h5>
+                    <div class="color">
+                        <span class="blues">G</span><span class="reds">o</span><span class="oranges">o</span><span
+                            class="blues">g</span><span class="greens">l</span><span class="reds">e</span>
+                    </div>
+                </li>
+                <li class="img4 uber">
+                    <h5 class="img4-figma">Client Name</h5>
+                    <img src="../image/uber.png.png">
+                </li>
+                <li class="img4 amazon">
+                    <h5 class="img4-figma">Client Name</h5>
+                    <img src="../image/amazon.png.png">
+                </li>
+            </ul>
+        </div>
+        <div class="click">
+            <button type="button">Try For Free</button>
+        </div>
+    </div>
+    <!-- phan6 -->
+    <div class="figma6">
+        <div class="center6">
+            <h2 class="text-figma6">Testimonials</h2>
+            <img src="../image/ipm.png.png">
+            <h4 class="content-figma6">Most calendars are designed for teams. Slate is designed for freelancers
+                who want a simple way to plan their schedule.</h4>
+        </div>
+        <div class="image6">
+            <img src="../image/people.png">
+            <ul>
+                <li class="paragrap about">Organize across</li>
+                <li class="paragrap">Ui designer</li>
+            </ul>
+        </div>
+        <div class="click1">
+            <button type="button">More Testimonials</button>
+        </div>
+    </div>
+    <!-- phan7 -->
+    <div class="figma7">
+        <div class="content-figma7">
+            <h2 class="center-figma7">Pricing</h2>
+            <h4 class="text-figma7">Most calendars are designed for teams.
+                Slate is designed for freelancers</h4>
+        </div>
+        <div class="order">
+            <div class="order1">
+                <h3 class="center-order">FREE</h3>
+                <h5 class="text-order">Organize across all
+                    apps by hand</h5>
+                <div class="icon">
+                    <h1 class="text-icon">0</h1>
+                    <div class="icon-order">
+                        <h3 class="icon1">$</h3>
+                        <h5 class="icon2">Per Month</h5>
+                    </div>
+                </div>
+                <div class="text-link">
+                    <ul>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                    </ul>
+                </div>
+                <button type="button"> Order Now</button>
             </div>
-            <div class="content2">
+            <div class="order1 order2">
+                <h3 class="center-order centers">STANDARD</h3>
+                <h5 class="text-order orders">Organize across all
+                    apps by hand</h5>
+                <div class="icon icons">
+                    <h1 class="text-icon text-icons">10</h1>
+                    <div>
+                        <h3 class="icon1 icon1s ">$</h3>
+                        <h5 class="icon2 icon2s">Per Month</h5>
+                    </div>
+                </div>
+                <div class="text-link links">
+                    <ul>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                    </ul>
+                </div>
+                <button class="check" type="button"> Order Now</button>
+            </div>
+            <div class=" order1">
+                <h3 class="center-order">BUSINESS</h3>
+                <h5 class="text-order">Organize across all
+                    apps by hand</h5>
+                <div class="icon">
+                    <h1 class="text-icon">99</h1>
+                    <div>
+                        <h3 class="icon1">$</h3>
+                        <h5 class="icon2">Per Month</h5>
+                    </div>
+                </div>
+                <div class="text-link">
+                    <ul>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                        <li class="link">Pricing Feature</li>
+                    </ul>
+                </div>
+                <button type="button"> Order Now</button>
+            </div>
+        </div>
+    </div>
+    <!-- phan8 -->
+    <div class="figma8">
+        <div class="center8">
+            <h2 class="center-figma8">Contact Us</h2>
+            <h4 class="text-figma8">Most calendars are designed for teams.
+                Slate is designed for freelancers</h4>
+        </div>
+        <div class="content-figma8">
+            <div class="input-figma8">
+                <h3 class="text1-figma8">Contact Us</h3>
+                <div><input type="text" placeholder="Your Name"></div>
+                <div><input type="email" placeholder="Your Email"></div>
+                <div><textarea placeholder="Your Message"></textarea></div>
+                <button type="button">Send</button>
+
+            </div>
+            <div class="icon-figma8">
                 <ul>
-                    <li class="list">
-                        <div class="image"><img src="../image/slate.png.png"></div>
-                        <h5 class="text1">Open type features variable fonys</h5>
-                        <p class="text-content">Slate helps you see how many more days you need to work to reach your
-                            financial goal</p>
+                    <li class="icons-figma8"><img src="../image/iconn.png">
+                        <h5 class="mail">6386 Spring St undefined Anchorage,
+                            Georgia 12473 United States</h5>
                     </li>
-                    <li class="list">
-                        <div class="image"><img src="../image/mdi.png.png"></div>
-                        <h5 class="text1">Design with real data</h5>
-                        <p class="text-content">Slate helps you see how many more days you need to work to reach your
-                            financial goal</p>
+                    <li class="icons-figma8"> <img src="../image/phone.png.png">
+                        <h5 class="mail1">(843) 555-0130</h5>
                     </li>
-                    <li class="list">
-                        <div class="image"><img src="../image/pen.png.png"></div>
-                        <h5 class="text1">Fastest way to
-                            take action</h5>
-                        <p class="text-content">Slate helps you see how many more days you need to work to reach your
-                            financial goal</p>
+                    <li class="icons-figma8"><img src="../image/mail.png.png">
+                        <h5 class="mail2">willie.jennings@example.com</h5>
                     </li>
                 </ul>
+                <div class="map"><img src="../image/googlemap.png.png"></div>
+                <div class="iconss">
+                    <ul>
+                        <li class="icon-style"><img src="../image/icons.png"></li>
+                        <li class="icon-style"><img src="../image/facebook.png.png"></li>
+                        <li class="icon-style"><img src="../image/in.png.png"></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer">
-                <img src="../image//screen.png.png">
-            </div>
-            </div>
+        </div>
+    </div>
+    <!-- footter -->
+    <div class="footer-figma">
+        <div class="footer1-figma">
+            <h3 class="text-footer">Pages</h3>
+            <ul>
+                <li class="link-footer">Home</li>
+                <li class="link-footer">Product</li>
+                <li class="link-footer">Pricing</li>
+                <li class="link-footer">About</li>
+                <li class="link-footer">Contact</li>
+            </ul>
+        </div>
+        <div class="footer1-figma">
+            <h3 class="text-footer">Tomothy </h3>
+            <ul>
+                <li class="link-footer">Eleanor Edwards</li>
+                <li class="link-footer">Ted Robertson</li>
+                <li class="link-footer">Annette Russell</li>
+                <li class="link-footer">Jennie Mckinney</li>
+                <li class="link-footer">Gloria Richards</li>
+            </ul>
+        </div>
+        <div class="footer1-figma">
+            <h3 class="text-footer">Jane Black</h3>
+            <ul>
+                <li class="link-footer">Philip Jones</li>
+                <li class="link-footer">Product</li>
+                <li class="link-footer">Colleen Russell</li>
+                <li class="link-footer">Marvin Hawkins</li>
+                <li class="link-footer">Bruce Simmmons</li>
+            </ul>
+        </div>
+        <div class="mail-footer">
+            <ul>
+                <li class="mail1-footer"><img src="../image/Vector (3).png"><a href="">7480 Mockingbird Hill
+                        undefined</a></li>
+                <li class="mail1-footer"><img src="../image/phones.png.png"><a href="">(239) 555-0108</a></li>
+                <li class="mail1-footer"><img src="../image/twitter.png"><img src="../image/face.png"><img
+                        src="../image/ins.png"></li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
