--- a/baitapfigma/indexx.html
+++ b/baitapfigma/indexx.html
@@ -307,7 +307,7 @@
             </ul>
         </div>
         <div class="footer1-figma">
-            <h3 class="text-footer">Jane Black</h3>
+            <h3 class="text-footer">Jane Black.</h3>
             <ul>
                 <li class="link-footer">Philip Jones</li>
                 <li class="link-footer">Product</li>
